--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "pdfjs-dist": "^3.11.174",
